--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "dependencies": {
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
-    "bootstrap": "^4.5.2",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -41,8 +40,7 @@
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
