--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
     "heroku-postbuild": "npm run build",
-    "sass": "cd client/src && sass.bat index.scss output.css && cd ../..",
-    "watch-sass": "sass.bat --watch client/src/index.scss client/src/output.css"
+    "sass": "cd client/src/assets && sass.bat index.scss ./css-output/output.css && cd ../../..",
+    "watch-sass": "sass.bat --watch client/src/assets/index.scss client/src/assets/css-output/output.css"
   },
   "repository": {
     "type": "git",
